Issue #3740: Null-initialize module state. Reviewed by Benjamin Peterson.